--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WorkManagerDemo</string>
+    <string name="notification_channel_id">200</string>
+    <string name="notification_title">title</string>
+    <string name="cancel_download">cancel</string>
 </resources>
